NLP TP's/texts/robotics/robotics.stackexchange_0000044240.txt
Q:

OS X installation problem rosmake: command not found

I tried to install ROS with the set of instructions. But I got this error.
[robot_model_tutorials] Updating /Users/Tony/ros/robot_model_tutorials
[robot_model_tutorials] Done.
(Over-)Writing setup.sh, setup.bash, and setup.zsh in /Users/Tony/ros
Bootstrapping ROS build
Detected ros_comm bootstrapping it too.
:15: Warning: 'with' will become a reserved keyword in Python 2.6
File "", line 15
with open(filename, "r") as f:
^
SyntaxError: invalid syntax
/bin/sh: rosmake: command not found
Traceback (most recent call last):
File "/usr/local/bin/rosinstall", line 16, in 
sys.exit(not rosinstall_main(sys.argv))
File "/Library/Python/2.6/site-packages/rosinstall/rosinstall_cli.py", line 228, in rosinstall_main
options.catkinpp)
File "/Library/Python/2.6/site-packages/rosinstall/rosinstall_cmd.py", line 100, in cmd_generate_ros_files
subprocess.check_call("source %s && rosmake ros%s --rosdep-install%s" % (os.path.join(path, 'setup.sh'), ros_comm_insert, rosdep_yes_insert), shell=True, executable='/bin/bash')
File "/System/Library/Frameworks/Python.framework/Versions/2.6/lib/python2.6/subprocess.py", line 462, in check_call
raise CalledProcessError(retcode, cmd)
subprocess.CalledProcessError: Command 'source /Users/Tony/ros/setup.sh && rosmake ros ros_comm --rosdep-install' returned non-zero exit status 127
Moved the Macports /opt/local folder as recommended.
Everything else was installed smoothly.
Got no idea what to do next.
Anything related to flags exporting?
Please help me.
Thank you a lot!!
OS X: 10.6.8
Xcode: 4.2 (for Snow Leopard).

Originally posted by TonyGon on ROS Answers with karma: 41 on 2012-09-18
Post score: 0

Original comments
Comment by Kevin on 2012-09-18:
Sorry ... you followed these instructions? Also, which part of these install process did you get to when this failed? Did you get as far as 1.4 Environment Setup? If so, make sure you are calling setup.bash.
Comment by TonyGon on 2012-09-18:
No, as by tag, I tried to install Electric, because is suppossed to be more stable than Fuerte in OSX. The instructions I followed are these ones Electric installation using Homebrew,not Macports. Got till 1.6.Rosinstall Desktop-full fails.
Comment by TonyGon on 2012-09-18:
@Jakub. Nope 2.7.3 it is.localhost:~ Tony$ python
Python 2.7.3 (v2.7.3:70274d53c1dd, Apr  9 2012, 20:52:43) 
[GCC 4.2.1 (Apple Inc. build 5666) (dot 3)] on darwin
Type "help", "copyright", "credits" or "license" for more information.

Btw I installed python27 with macports.
Comment by Jakub on 2012-09-18:
@Tony. From error log above that your ROS installation is at Python 2.6 source tree: File "/Library/Python/2.6/site-packages/rosinstall/rosinstall_cmd.py".   If you have already python2.7 try to remove and reinstall ROS to put it in 2.7 tree.
Comment by TonyGon on 2012-09-19:
Try to install again and now the directory of 2.6 doesn't exists. sudo easy_install pip requests that directory. I created a new one at the same place /Library/Python/2.7/site-packages/. But how do you exactly use the -d option? I've tried sudo easy_install pip -d /Library/Python/2.7/site-packages/
Comment by Jakub on 2012-09-19:
If dir 2.6 does not exists any more it should not be needed. Try to upgrade easy_installl to the new version.
Comment by TonyGon on 2012-09-19:
@Jakub
Did it, the result is described in the update below.
Comment by Jakub on 2012-09-19:
@TonyGon Check the update of my answer

A:

Update.
Well, we're getting somewhere.
Updated pip, installed everything. No errors. Then point 1.6 Rosinstall came along.
Got the "no gtest Formula" error, but created one as in here.
I installed vcstools, and when I ran desktop-full rosinstall I got 2 built errors. Then didn't change anything, ran the install again, and got 1 error, then again 2, strange.
This is from the log output file.

[ rosmake ] Output from build of
package roslib written to: 
[ rosmake ]
/Users/Tony/.ros/rosmake/rosmake_output-20120920-024140/roslib/build_output.log
[rosmake-0] Finished <<< roslib [FAIL]
[ 2.54 seconds ]
[ rosmake ] Halting due to failure in
package roslib.  [ rosmake ] Waiting
for other threads to complete.
[rosmake-1] Finished <<< roscpp_traits
[PASS] [ 1.23 seconds ]
[ rosmake ] Results:
[ rosmake ] Built 7 packages with 1
failures.
[ rosmake ] Summary output to
directory
[ rosmake ]
/Users/Tony/.ros/rosmake/rosmake_output-20120920-024140
Traceback (most recent call last):
File
"/Library/Frameworks/Python.framework/Versions/2.7/bin/rosinstall",
line 16, in 
sys.exit(not rosinstall_main(sys.argv))   File
"/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/rosinstall/rosinstall_cli.py",
line 228, in rosinstall_main
options.catkinpp)   File "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/rosinstall/rosinstall_cmd.py",
line 100, in cmd_generate_ros_files
subprocess.check_call("source %s && rosmake ros%s --rosdep-install%s" %
(os.path.join(path, 'setup.sh'),
ros_comm_insert, rosdep_yes_insert),
shell=True, executable='/bin/bash')  
File
"/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py",
line 511, in check_call
raise CalledProcessError(retcode, cmd) subprocess.CalledProcessError:
Command 'source
/Users/Tony/ros/setup.sh && rosmake
ros ros_comm --rosdep-install'
returned non-zero exit status 1

Getting closer every time...
rosemacs, rospack, rosbuild, roslang, cpp_common, roscpp_traits were [Built].
roslib [Build Fail] . and the rest reads as [Not Built] 
What are your thoughts on this one?, Thanks.

Originally posted by TonyGon with karma: 41 on 2012-09-18
This answer was ACCEPTED on the original site
Post score: 0

Original comments
Comment by WilliamWoodall on 2012-09-19:
What he said ^^^.
Comment by TonyGon on 2012-09-19:
@WilliamWoodall
Yes, my bad, I tried it but it didn't work, so I deleted everything and installed again, but the error about python 2.6 is still coming up.
Comment by WilliamWoodall on 2012-09-19:
Wait so what are you doing here?  Trying to install pip?
Comment by TonyGon on 2012-09-19:
Well now I am, yes.
After deleting everything and starting from scratch.
And I got only till the pip installation.
Will try Jakub's updated advise, and let you know guys.
Comment by WilliamWoodall on 2012-09-19:
That doesn't really tell me anything, the above error occurs because rosmake ros ros_comm --rosdep-install failed.  rosmake failed because roslib failed to build.  You can look at the log file it output, or you can run roscd roslib and then make to get the raw output.
Comment by WilliamWoodall on 2012-09-19:
Also, you can just call rosmake ros ros_comm in the future rather than calling rosinstall each time.
Comment by TonyGon on 2012-09-19:
Well, then where can I find more information about the error so you can help me out?
The command rosmake is not found, and roscd doesn't work cuz ther's no roslib package, it failed. =S
Comment by TonyGon on 2012-09-20:
@Jakub & @WilliamWoodall.
Thank you guys for your help.
I just installed Ubuntu 11.04 in Parallels and got it over with.
Browsing the tutorials now.
Too bad I couldn't install it in OSX.

